Utf8 seems to be the way to go... At least it works here with French locale.

BUG: 249803


git-svn-id: svn://anonsvn.kde.org/home/kde/branches/work/kst/portto4/kst@1181993 283d02a7-25f6-0310-bc7c-ecb5cbfe19da